[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nmpl"
version = "0.2.1"
description = "No More Packet Loss"
dependencies = []

[project.scripts]
nmpl = "core.__main__:main"

[tool.setuptools.packages.find]
include = ["core*"]
exclude = ["output*"]